geonode/static/geonode/less/base.less
/* ... */
.hd-actions a.btn-info {
  background-color: @orangeLight;
}

h2.page-title {
  text-transform:uppercase;
  font-size:48px;
  letter-spacing: 0.1em;
  font-family:@customFont;
  font-weight: 300;
  color:@black;
}

.strong {
  font-weight:bold;
}

.btn.strong {
  margin-bottom:10px;
}

ul.nav-pills.filter {
  margin-left:-10px;

  a {
    display:block;
    float:left;
    text-transform:capitalize;
    padding:4px 10px;
    border-right:1px solid @bdrColor;
    font-size:@baseFontSize - 1;
    .border-radius(0);
  }

  a.selected { color: black; }

  a:hover {
    text-decoration:none;
  }

  form {
    padding:2px 0 0 10px;

    label {
      font-size:@baseFontSize - 2;
      font-weight:bold;
    }

    select {
      font-size:@baseFontSize - 2;
      height:20px;
      width:90px;
    }
  }
}

/** pagination **/
.pages {
  font-weight:bold;
  font-size:11px;
  text-align:right;
  clear: left;
}

.comments header .pages {
  position:absolute;
  top:0;
  right:0;
}

.pages span {
  padding-right:7px;
}

.pages .pager {
  display:inline;
  border-left:1px solid @bdrColor;
  padding-left:3px;
}

.pager a, .pager span {
  padding:0 !important;
  border: 0 !important;
  display:inline-block;
  width:15px;
  height:15px;
  text-indent:-9999px;
}

.pages .prev { background:url(../../theme/img/arrows_gr_sm.png) no-repeat 0 0; }
.pages .next { background:url(../../theme/img/arrows_gr_sm.png) no-repeat -11px 0; }
.pages a.prev:hover { background:url(../../theme/img/arrows_gr_sm.png) no-repeat 0 -15px; }
.pages a.next:hover { background:url(../../theme/img/arrows_gr_sm.png) no-repeat -11px -15px; }

.loadmore.loading a {
  text-decoration: none;
}
.loadmore.loading a:before {
  content: "[Loading...] ";
  color: @grayNeutral;
  text-decoration: none;
}

ul.space li {
  margin-bottom:5px;
}

/** view by **/
.viewby {
  font-size: 10px;
  line-height: 14px;

  a {
    color: @graySp;
    padding-left: 8px;
  }
  i {
    font-size: 18px;
  }
  a.active {
    color: @orange;
  }
}

/** slide nav pane (layers & maps) **/
#contain-slider {
  overflow: hidden;

  .tab-content {
     margin-left: 40px;
     width: auto;
     padding-bottom: 40px;
  }
}
#slide-pane {
  border-right: 1px solid @grayNeutral;
  padding-right: 10px;
  position: relative;
  margin-left: 0;

  h2 {
    font-size: 14px;
    color: #FFF;
    background-color: @grayDark;
    padding: 0 8px;
    .border-radius(3px);
    margin-top: 10px;
    #title;
  }
  .nav li {
    border-bottom: 1px solid @grayNeutral;
    line-height: 1.3;
  }
  .nav a {
    padding: 0.8em;
    color: @grayDark;
    font-size: 16px;
  }
  .nav a.active {
    color: @orange;
  }
  a.toggle {
    text-decoration: none;
  }
  a.toggle-pane {
    display: block;
    font-size: 20px;
    text-align: center;
    position: absolute;
    right: 0;
    top: 10px;
    margin-right: -30px;
    width: 20px;
    padding: 8px 4px 6px;
    border: 1px solid @grayNeutral;
    .border-radius(0 3px 3px 0);
  }
  a.toggle-nav {
    display: block;
    color: @grayLight;
    i {
      padding-right: 8px;
    }
  }

}
#nav-keywords {
  ul.nav {
    list-style: none;
    margin: 0;
    li {
      margin-bottom: 8px;
      border: 0
    }
    a {
      display: inline;
      padding: 3px 5px;
      font-size: 12px;
      background-color: @navBkgd;
      color: @graySp;
      text-transform: lowercase;
      .border-radius(4px);
    }
    .count {
      color: @graySp;
      padding-left: 8px;
      font-size: 11px;
    }
  }
}

// Bootstrap overwrite
.tabs-left .nav-tabs {
  float:none !important;
  border-right:0 !important;

  a {
    font-size:@baseFontSize + 4;
    font-weight:bold;
    padding:20px 20px;
    color:@grayDarker;
    background: rgb(239,239,238); /* Old browsers */
    background: -moz-linear-gradient(top,  rgba(239,239,238,1) 0%, rgba(251,251,251,1) 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(239,239,238,1)), color-stop(100%,rgba(251,251,251,1))); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  rgba(239,239,238,1) 0%,rgba(251,251,251,1) 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  rgba(239,239,238,1) 0%,rgba(251,251,251,1) 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  rgba(239,239,238,1) 0%,rgba(251,251,251,1) 100%); /* IE10+ */
    background: linear-gradient(top,  rgba(239,239,238,1) 0%,rgba(251,251,251,1) 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#efefee', endColorstr='#fbfbfb',GradientType=0 ); /* IE6-9 */
    margin-bottom:0 !important;
    .border-radius(0) !important;
    border:0;
    font-family:@customFont;
    font-weight: 700;
  }
}

.tabs-left > .nav-tabs .active > a, .tabs-left > .nav-tabs .active > a:hover, .tabs-left .nav-tabs a:hover {
  border:0;
  background: rgb(200,203,202); /* Old browsers */
  background: -moz-linear-gradient(top,  rgba(200,203,202,1) 0%, rgba(218,221,220,1) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(200,203,202,1)), color-stop(100%,rgba(218,221,220,1))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  rgba(200,203,202,1) 0%,rgba(218,221,220,1) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  rgba(200,203,202,1) 0%,rgba(218,221,220,1) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  rgba(200,203,202,1) 0%,rgba(218,221,220,1) 100%); /* IE10+ */
  background: linear-gradient(top,  rgba(200,203,202,1) 0%,rgba(218,221,220,1) 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c8cbca', endColorstr='#dadddc',GradientType=0 ); /* IE6-9 */
  color:@grayDarker;
}


.tab-pane article {
  margin-bottom:40px;

  img {
    margin-bottom:10px;
  }
}

/** map viewer **/
#paneltbar{
  margin-top: 60px;
}
/* ... */

